# speech-analysis

./: .env.example  .gitignore  ADVANCED_CONFIDENCE_RUBRIC_FEEDBACK.md  ANNOTATIONS_VISUAL_GUIDE.md  API_DOCUMENTATION.md  API_RESPONSE_DOCUMENTATION.md  AUDIT_COMPLETE.md  BATCH_VERIFICATION_SUMMARY.md  BOTH_FEATURES_COMPLETE.md  CALIBRATION_ROOT_CAUSE_ANALYSIS.md  CHANGELOG.md  CHECKLIST_COMPLETE.md  CODE_CHANGES.md  COMPARISON_RESULTS.md  ENDPOINT_VERIFICATION_RESULTS.md  ENHANCEMENT_RECOMMENDATIONS.md  EXPERIMENT_QUICK_START.md  EXPERIMENT_RESULTS.md  EXPERIMENT_SUMMARY.md  EXPERIMENT_SUMMARY_VISUAL.md  EXPERIMENT_TEST_SCRIPTS_README.md  FASTAPI_QUICKSTART.md  FAST_ANALYSIS_API.md  FEEDBACK_ENHANCEMENT_COMPLETE.md  FULL_ANALYSIS_COMPARISON.md  IMPLEMENTATION_COMPLETE.md  IMPORT_FIXES_SUMMARY.md  INDEX.md  JOB_QUEUE_FIX.md  LICENSE  NULL_FIELDS_COMPLETE_REPORT.md  NULL_FIELDS_FIX_SUMMARY.md  OPTIMIZATION_ANALYSIS_COMPLETE.md  OPTIMIZATION_COMPLETE.md  OPTIMIZATION_IMPLEMENTATION_GUIDE.md  OPTIMIZATION_QUICK_SUMMARY.txt  OPTIMIZATION_STRATEGY.md  OPTIMIZATION_STRATEGY_FINAL.md  PER_RUBRIC_FEEDBACK_DOCUMENTATION.md  PER_RUBRIC_FEEDBACK_ENHANCEMENT_SUMMARY.md  (+82 more)
debug_scripts/: README.md  TIMESTAMPED_STRUCTURE_DEMO.py  check_score_consistency.py  demo_feedback_system.py  demo_new_context_system.py  final_validation.py  final_validation_test.py  show_summary.py  test_complete_integration.py  test_confidence_features.py  test_context_refactor.py  test_coupling.py  test_edge_cases.py  test_edge_cases_local.py  test_feedback_generation.py  test_feedback_in_response.py  test_rescore_with_coupling.py  test_score_verification.py  validate_pron.py  verify_consistency_after_coupling.py  verify_feedback_in_full.py
notebooks/: dataset_extract.ipynb  llm_extract.ipynb  main.ipynb  prosody_extract.ipynb  test_engine_runner.ipynb  tester.ipynb  wav2vec.ipynb
outputs/: l2arctic_deep_index.csv  l2arctic_fluency_results.csv  l2arctic_fluency_results_human.csv  src_dump.md
outputs/audio_analysis/: ielts5-5.5.json  ielts5.5.json  ielts7-7.5.json  ielts7.json  ielts8-8.5.json  ielts8.5.json  ielts9.json
outputs/band_results/: ielts5-5.5.json  ielts5.5.json  ielts7-7.5.json  ielts7.json  ielts8-8.5.json  ielts8.5.json  ielts9.json  merged_band_analysis.txt
outputs/l2arctic_deep/: L2A_000.json  L2A_001.json  L2A_002.json  L2A_003.json  L2A_004.json  L2A_005.json  L2A_007.json  L2A_008.json  L2A_009.json  L2A_010.json  L2A_011.json  L2A_012.json  L2A_014.json  L2A_015.json  L2A_016.json  L2A_017.json  L2A_018.json  L2A_019.json  L2A_020.json  L2A_021.json
samples/: sample4.flac  sample6.flac  sample7.flac
scripts/: VISUALIZATION_FIX.py  admin_keys.py  analyze_calibration.py  audit_all_files.py  audit_response_pipeline.py  batch_analysis.py  batch_analysis_deep.py  batch_band_analysis.py  check_consistency.py  check_lex_llm.py  compare_baseline_vs_optimized.py  comparison_table.py  debug_lex_detailed.py  debug_scores.py  demo_null_fields_fix.py  export_src_to_md.py  extract_youtube.py  final_consistency_check.py  final_consistency_report.py  generate_optimization_report.py  generate_test_keys.py  push_to_55.py  quick_validation.py  quick_verify_consistency.py  rescore_with_calibration.py  test_combined_llm_experiment.py  test_job_queue_modal.py  test_quick.py  test_quick_optimized.py  test_rapidapi_endpoints.py  test_rapidapi_full.py  test_rapidapi_signature.py  ultra_low_band.py  validate_api_response.py  verify_band_consistency.py  verify_example_response.py  verify_hardcoded_keys.py
src/: __init__.py  analyze_audio.py  analyze_band.py  analyzer.py  analyzer_old.py  analyzer_raw.py  audio_processing.py  config.py  disfluency_detection.py  engine.py  engine_runner.py  exceptions.py  fluency_metrics.py  ielts_band_scorer.py  llm_processing.py  logging_config.py  metrics.py
src/api/: __init__.py  direct.py  protections.py  routes.py  v1.py
src/audio/: __init__.py  filler_detection.py  processing.py
src/auth/: __init__.py  key_manager.py  middleware.py
src/cli/: __init__.py  analyze_audio.py  batch_analysis.py  batch_analysis_deep.py  batch_band_analysis.py
src/core/: __init__.py  analyze_audio.py  analyze_band.py  analyzer_fast.py  analyzer_raw.py  audio_processing.py  disfluency_detection.py  (+10 more)
tests/: __init__.py  test_audio_processing.py  test_exceptions.py  test_ielts_band_scorer.py  test_llm_processing.py
(+12 files in other folders)
