[project]
name = "speech-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asyncio>=4.0.0",
    "dotenv>=0.9.9",
    "language-tool-python>=3.2.2",
    "openai>=2.15.0",
    "openai-whisper>=20250625",
    "pandas>=2.3.3",
    "python-dotenv>=1.2.1",
    "soundfile>=0.13.1",
    "torch>=2.9.1",
    "torchaudio>=2.9.1",
    "torchcodec>=0.9.1",
    "transformers>=4.57.3",
    "whisperx>=3.4.3",
]

[dependency-groups]
data = [
    "datasets>=4.4.2",
    "ffmpeg-python>=0.2.0",
    "librosa>=0.11.0",
    "yt-dlp>=2025.12.8",
]
