[project]
name = "speech-analysis"
version = "0.1.0"
description = "IELTS Band Scoring System with Hybrid Metrics + LLM Evaluation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0,<1.0",
    "language-tool-python>=3.2.2,<3.3",
    "librosa>=0.11.0",
    "numpy>=1.26.0",
    "openai>=2.15.0,<3.0",
    "openai-whisper>=20250625",
    "pandas>=2.2.3",
    "python-dotenv>=1.2.1,<2.0",
    "python-multipart>=0.0.6",
    "pydantic>=2.0.0,<3.0",
    "soundfile>=0.13.1,<0.14",
    "torch>=2.9.1,<3.0",
    "torchaudio>=2.9.1,<3.0",
    "torchcodec>=0.9.1,<1.0",
    "transformers>=4.57.3,<5.0",
    "uvicorn[standard]>=0.24.0,<1.0",
    "whisperx>=3.4.3",
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
]
data = [
    "datasets>=4.4.2,<5.0",
    "ffmpeg-python>=0.2.0,<1.0",
    "librosa>=0.11.0,<1.0",
    "yt-dlp>=2025.12.8,<2026",
]
