[project]
name = "speech-analysis"
version = "0.1.0"
description = "IELTS Band Scoring System with Hybrid Metrics + LLM Evaluation"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["speech-analysis", "ielts", "band-scoring", "nlp", "audio"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Web Framework
    "fastapi>=0.104.0,<1.0",
    "uvicorn[standard]>=0.24.0,<1.0",
    "python-multipart>=0.0.6",
    
    # Core ML/Audio
    "torch>=2.9.1,<3.0",
    "torchaudio>=2.9.1,<3.0",
    "torchcodec>=0.9.1,<1.0",
    "transformers>=4.57.3,<5.0",
    
    # Audio Processing
    "librosa>=0.11.0,<1.0",
    "soundfile>=0.13.1,<0.14",
    "openai-whisper>=20250625",
    "whisperx>=3.4.3",
    
    # Data & Processing
    "pandas>=2.2.3,<3.0",
    "numpy>=2.0.2,<3.0",
    "pydantic>=2.0.0,<3.0",
    
    # LLM & NLP
    "openai>=2.15.0,<3.0",
    "language-tool-python>=3.2.2,<3.3",
    
    # Utilities
    "python-dotenv>=1.2.1,<2.0",
]

[project.optional-dependencies]
all = [
    "speech-analysis[dev,data]",
]

[project.urls]
Homepage = "https://github.com/yourusername/speech-analysis"
Documentation = "https://github.com/yourusername/speech-analysis/wiki"
Repository = "https://github.com/yourusername/speech-analysis.git"
Issues = "https://github.com/yourusername/speech-analysis/issues"

[project.scripts]
speech-analyze = "src.cli.analyze_audio:main"
speech-batch = "src.cli.batch_analysis:main"

[dependency-groups]
dev = [
    "pytest>=7.0.0,<8.0",
    "pytest-asyncio>=0.21.0,<0.22",
    "pytest-cov>=4.1.0,<5.0",
    "httpx>=0.25.0,<1.0",
    "ruff>=0.1.0,<1.0",
    "black>=23.0.0,<24.0",
    "mypy>=1.7.0,<2.0",
]

data = [
    "datasets>=4.4.2,<5.0",
    "ffmpeg-python>=0.2.0,<1.0",
    "librosa>=0.11.0,<1.0",
    "yt-dlp>=2025.12.8,<2026",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=src --cov-report=html --cov-report=term-missing"

[tool.black]
line-length = 100
target-version = ["py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "W", "I"]
exclude = [".git", "__pycache__", "build", "dist"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
